# storesync

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TECHNICAL_SPEC.md  conftest.py  docker-compose.yml  pyproject.toml
apps/brands/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py
apps/brands/migrations/: 0001_initial.py  0002_location.py  0003_add_gps_coordinates.py
apps/brands/tests/: test_models.py  test_views.py
apps/campaigns/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/campaigns/migrations/: 0001_initial.py  0002_add_html_email_fields.py
apps/campaigns/services/: __init__.py  content_generator.py  email_service.py  similarity_search.py
apps/campaigns/tests/: test_models.py  test_services.py  test_views.py
apps/core/: models.py  pagination.py  permissions.py
apps/core/migrations/: 0001_enable_pgvector.py
apps/users/: admin.py  management_urls.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_preferences.py
claude/: IMPLEMENTATION_GUIDE.md
config/: __init__.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py
frontend/: .env.local.example  .gitignore  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  campaigns.spec.ts
requirements/: base.txt  local.txt  production.txt
sample_data/: acmemart_locations.csv  acmemart_templates.json
samples/: location_import_template.csv
scripts/: init-db.sh
(+66 files in other folders)
